<resources>
    <string name="app_name">HelloKotlin</string>

    <string name="tab_item_hongdroid">홍드로이드</string>
    <string name="tab_item_jeongdaeri">개발하는 정대리</string>

    <string name="hongdroid_ch3_title">Intent 화면 이동 및 데이터 전달</string>
    <string name="hongdroid_ch5_title">ListView / 커스텀 ListView</string>
    <string name="hongdroid_ch6_title">네비게이션 메뉴 (Navigation Drawer)</string>
    <string name="hongdroid_ch7_title">SharedPreferences</string>
    <string name="hongdroid_ch8_title">WebView</string>
    <string name="hongdroid_ch9_title">카메라 실행 and 찍은 사진 가져오기</string>
    <string name="hongdroid_ch10_title">리사이클러뷰</string>


    <string name="label_arrived_msg">도착한 메시지:</string>
    <string name="back">뒤로가기</string>

    <string name="label_basic_list">기본 리스트뷰</string>
    <string name="label_custom_list">커스텀 리스트뷰</string>

    <string name="menu_home">홈</string>
    <string name="menu_search">검색하기</string>
    <string name="menu_my_page">마이페이지</string>

    <string name="open_camera">카메라 실행</string>


    <string name="jeongdaeri_ch3_title">생명주기</string>
    <string name="jeongdaeri_ch4_title">레이아웃 연습1</string>
    <string name="jeongdaeri_ch5_title">레이아웃 연습2</string>
    <string name="jeongdaeri_ch7_title">Lottie Animation</string>
    <string name="jeongdaeri_admob_title">구글 AdMob</string>
    <string name="jeongdaeri_shake_detect_title">동작센서, 흔들림(Shake) 감지하기</string>
    <string name="jeongdaeri_completion_block_title">Completion Block (비동기)</string>
    <string name="jeongdaeri_ch8_title">생성자</string>
    <string name="jeongdaeri_recycler_view_title">리사이클러뷰</string>
    <string name="jeongdaeri_ch9_title">커스텀 다이얼로그</string>
    <string name="jeongdaeri_ch10_title">싱글턴</string>
    <string name="jeongdaeri_bottom_navigation_title">Bottom Navigation</string>
    <string name="jeongdaeri_intro_title">ViewPager2 (인트로 슬라이드 만들기)</string>
    <string name="jeongdaeri_ch11_title">API</string>
    <string name="jeongdaeri_livedata_viewmodel_title">LiveData와 ViewModel</string>


    <string name="splash_text">Splash 화면이당</string>

    <string name="flights_board_header_text">FLIGHTS BOARD</string>
    <string name="flights_board_start_date">3월 24일</string>
    <string name="flights_board_middle_date">5월 24일</string>
    <string name="flights_board_end_date">7월 24일</string>
    <string name="flights_board_from_1">AMM</string>
    <string name="flights_board_from_2">AMMAN</string>
    <string name="flights_board_to_1">DBX</string>
    <string name="flights_board_to_2">DUBAI</string>

    <string name="greet">Get the life you want!\nSave more money.</string>
    <string name="create_account">Create free account</string>
    <string name="login_with_facebook">Continue with facebook</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login">Login</string>

    <string name="label_lottie_basic">Lottie Animation 기본 (Full 재생)</string>
    <string name="label_lottie_custom">Lottie Animation 커스텀 (클릭하세요!)</string>

    <string name="call_method">함수 호출하기</string>

    <string name="label_basic_constructor">기본 생성자</string>
    <string name="label_constructor_with_params">매개변수가 있는 생성자</string>
    <string name="label_flexible_constructor">더 유연한 생성자</string>
    <string name="label_name">이름:</string>
    <string name="label_age">나이:</string>
    <string name="label_is_married">결혼여부:</string>
    <string name="label_nickname">닉네임:</string>

    <string name="dialog_title">개발하는 쩡대리</string>
    <string name="dialog_description">안녕하세요!\n구독!좋아요!\n부탁드립니다!!</string>
    <string name="dialog_btn_subscribe">구독!</string>
    <string name="dialog_btn_like">좋아요!</string>

    <string name="label_class_a">a:</string>
    <string name="label_class_b">b:</string>
    <string name="label_normal_class">Normal Class</string>
    <string name="label_singleton_class">Singleton Class</string>
    <string name="label_normal_db_helper">Normal DB Helper</string>
    <string name="label_singleton_db_helper">Singleton DB Helper</string>

    <string name="tab_home">홈</string>
    <string name="tab_shopping_cart">장바구니</string>
    <string name="tab_my_page">마이페이지</string>

    <string name="radio_search_photo">사진검색</string>
    <string name="radio_search_user">사용자검색</string>
    <string name="helper_filter">검색어를 입력해주세요</string>
    <string name="label_search">검색</string>
    <string name="content_description_search">사진을 검색한다.</string>
    <string name="label_more">더보기</string>
    <string name="content_description_more">더보기 메뉴</string>
    <string name="label_save_search_history">검색어 저장</string>
    <string name="label_delete_all_history">전체삭제</string>
    <string name="label_search_history">최근 검색어</string>
</resources>