<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivJeongdaeriAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivJeongdaeriAvatar">

            <Button
                android:id="@+id/btnCh3"
                style="@style/App.RoundedButton.Jeongdaeri"
                android:text="@string/jeongdaeri_ch3_title" />

            <Button
                android:id="@+id/btnCh4"
                style="@style/App.RoundedButton.Jeongdaeri"
                android:layout_marginTop="16dp"
                android:text="@string/jeongdaeri_ch4_title" />

            <Button
                android:id="@+id/btnCh5"
                style="@style/App.RoundedButton.Jeongdaeri"
                android:layout_marginTop="16dp"
                android:text="@string/jeongdaeri_ch5_title" />

            <Button
                android:id="@+id/btnCh7"
                style="@style/App.RoundedButton.Jeongdaeri"
                android:layout_marginTop="16dp"
                android:text="@string/jeongdaeri_ch7_title" />
            <Button
                android:id="@+id/btnAdMob"
                style="@style/App.RoundedButton.Jeongdaeri"
                android:layout_marginTop="16dp"
                android:text="@string/jeongdaeri_admob_title" />
            <Button
                android:id="@+id/btnShakeDetect"
                style="@style/App.RoundedButton.Jeongdaeri"
                android:layout_marginTop="16dp"
                android:text="@string/jeongdaeri_shake_detect_title" />
            <Button
                android:id="@+id/btnCompletionBlock"
                style="@style/App.RoundedButton.Jeongdaeri"
                android:layout_marginTop="16dp"
                android:text="@string/jeongdaeri_completion_block_title" />
            <Button
                android:id="@+id/btnCh8"
                style="@style/App.RoundedButton.Jeongdaeri"
                android:layout_marginTop="16dp"
                android:text="@string/jeongdaeri_ch8_title" />
            <Button
                android:id="@+id/btnRecyclerView"
                style="@style/App.RoundedButton.Jeongdaeri"
                android:layout_marginTop="16dp"
                android:text="@string/jeongdaeri_recycler_view_title" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>