<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivHongdroidAvatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivHongdroidAvatar"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btnCh3"
                style="@style/App.RoundedButton.Hongdroid"
                android:text="@string/hongdroid_ch3_title" />

            <Button
                android:id="@+id/btnCh5"
                style="@style/App.RoundedButton.Hongdroid"
                android:layout_marginTop="16dp"
                android:text="@string/hongdroid_ch5_title" />

            <Button
                android:id="@+id/btnCh6"
                style="@style/App.RoundedButton.Hongdroid"
                android:layout_marginTop="16dp"
                android:text="@string/hongdroid_ch6_title" />

            <Button
                android:id="@+id/btnCh7"
                style="@style/App.RoundedButton.Hongdroid"
                android:layout_marginTop="16dp"
                android:text="@string/hongdroid_ch7_title" />

            <Button
                android:id="@+id/btnCh8"
                style="@style/App.RoundedButton.Hongdroid"
                android:layout_marginTop="16dp"
                android:text="@string/hongdroid_ch8_title" />

            <Button
                android:id="@+id/btnCh9"
                style="@style/App.RoundedButton.Hongdroid"
                android:layout_marginTop="16dp"
                android:text="@string/hongdroid_ch9_title" />

            <Button
                android:id="@+id/btnCh10"
                style="@style/App.RoundedButton.Hongdroid"
                android:layout_marginTop="16dp"
                android:text="@string/hongdroid_ch10_title" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>