<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/btn_rounded_border_black"
        android:padding="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_smile_big"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:layout_marginVertical="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_description"
            android:textAlignment="center"
            android:lineSpacingExtra="5dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnSubscribe"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_btn_subscribe"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginVertical="10dp"
            android:background="@drawable/btn_rounded_background_orange"/>

        <Button
            android:id="@+id/btnLike"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_btn_like"
            android:textStyle="bold"
            android:layout_marginVertical="10dp"
            android:background="@drawable/btn_rounded_border_orange"/>
    </LinearLayout>

</FrameLayout>