<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LayoutPractice1Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTopBg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#1E88E5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- 상단바 -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flights_board_header_text"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- step -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutDateStep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp">

            <View
                android:id="@+id/dot1"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circle_fill_white"
                app:layout_constraintBottom_toTopOf="@+id/tvStartDate"
                app:layout_constraintStart_toStartOf="@+id/tvStartDate"
                app:layout_constraintEnd_toEndOf="@+id/tvStartDate"/>

            <TextView
                android:id="@+id/tvStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flights_board_start_date"
                android:textColor="#FFF"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvMiddleDate"/>

            <View
                android:id="@+id/line1"
                android:layout_marginHorizontal="8dp"
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:background="#FFF"
                app:layout_constraintTop_toTopOf="@+id/dot1"
                app:layout_constraintBottom_toBottomOf="@+id/dot1"
                app:layout_constraintStart_toEndOf="@+id/dot1"
                app:layout_constraintEnd_toStartOf="@+id/dot2"/>

            <View
                android:id="@+id/dot2"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/circle_fill_white"
                app:layout_constraintBottom_toBottomOf="@+id/dot1"
                app:layout_constraintStart_toStartOf="@+id/tvMiddleDate"
                app:layout_constraintEnd_toEndOf="@+id/tvMiddleDate"
                app:layout_constraintTop_toTopOf="@+id/dot1"/>

            <TextView
                android:id="@+id/tvMiddleDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flights_board_middle_date"
                android:textColor="#FFF"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/tvStartDate"
                app:layout_constraintEnd_toStartOf="@+id/tvEndDate"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <View
                android:id="@+id/line2"
                android:layout_marginHorizontal="8dp"
                android:layout_width="80dp"
                android:layout_height="1dp"
                android:background="#FFF"
                app:layout_constraintTop_toTopOf="@+id/dot2"
                app:layout_constraintBottom_toBottomOf="@+id/dot2"
                app:layout_constraintStart_toEndOf="@+id/dot2"
                app:layout_constraintEnd_toStartOf="@+id/dot3"/>

            <View
                android:id="@+id/dot3"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/circle_fill_white"
                app:layout_constraintTop_toTopOf="@+id/dot1"
                app:layout_constraintBottom_toBottomOf="@+id/dot1"
                app:layout_constraintStart_toStartOf="@+id/tvEndDate"
                app:layout_constraintEnd_toEndOf="@+id/tvEndDate"/>

            <TextView
                android:id="@+id/tvEndDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flights_board_end_date"
                android:textColor="#FFF"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvMiddleDate"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutBottomBg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTopBg">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layoutAirplaneBg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/circle_airplane_background"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/layoutTopBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTopBg">

        <ImageView
            android:id="@+id/ivAirplane"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/ic_airplane" />
    </LinearLayout>

    <!-- 출발지 ~ 도착지 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/layoutTopBg"
        app:layout_constraintEnd_toStartOf="@+id/layoutAirplaneBg"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:gravity="end">

        <TextView
            android:layout_marginBottom="4dp"
            android:textColor="#FFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flights_board_from_1"/>
        <TextView
            android:textSize="18sp"
            android:textColor="#FFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flights_board_from_2"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/layoutTopBg"
        app:layout_constraintStart_toEndOf="@+id/layoutAirplaneBg"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp">
        <TextView
            android:layout_marginBottom="4dp"
            android:textColor="#FFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flights_board_to_1"/>
        <TextView
            android:textSize="18sp"
            android:textColor="#FFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flights_board_to_2"
            android:textStyle="bold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>